<resources>
    <string name="app_name">Recimaps</string>
    <string name="todo" />
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="account_cir">TODO</string>
    <string name="confirme_contrase_a">Confirme contraseña</string>
    <string name="hojas">TODO</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro_listo_iniciar_sesi_n">Registro listo, iniciar sesión!</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="regresar_a_inicio">Regresar a inicio</string>
    <string name="candado">candado</string>
    <string name="hoja_logo">hoja logo</string>
    <string name="punto_de_reciclaje">Punto de reciclaje</string>
    <string name="notificaci_n">Notificación</string>
    <string name="publicaci_n">Publicación</string>
    <string name="men">Menú</string>
    <string name="agregar_punto">Agregar Punto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pefilfoto">pefilfoto</string>
    <string name="nombre">Nombre</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="perfilfoto">perfilfoto</string>
    <string name="perfil">Perfil</string>
    <string name="Perfil" />
    <string name="nombre_completo">Nombre Completo</string>
</resources>